fixes title cutoff issue (https://github.com/alex-shpak/hugo-book/issues/379)

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -15,3 +15,7 @@ img {
     margin-right: 2em;
   }
 }
+
+.book-brand a {
+  flex-wrap: wrap;
+}
